--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,3 @@
 {
-    "match_csv_url": "https://docs.google.com/spreadsheets/d/11QHK-mGfUhhHa8OsFZwiYn2da6IXUTPYuVKtXC7mMjU/export?format=csv&id=11QHK-mGfUhhHa8OsFZwiYn2da6IXUTPYuVKtXC7mMjU&gid=1122078494",
-    "teams_csv_url": "https://docs.google.com/spreadsheets/u/1/d/11QHK-mGfUhhHa8OsFZwiYn2da6IXUTPYuVKtXC7mMjU/export?format=csv&id=11QHK-mGfUhhHa8OsFZwiYn2da6IXUTPYuVKtXC7mMjU&gid=0"
+    "API_BASE": "http://buzz.local:8000/api"
 }
